# SC2-PCR-CPP

./: CMakeLists.txt  ConfigRead.cpp  ConfigRead.h  FPFHPCR.cpp  FPFHPCR.h  README.md  config.txt  main.cpp  pcr.cpp  pcr.h
include/: FPFHPCR.h  pcr.h
src/: main.cpp
